# skill-link

./: CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  README_CN.md  SECURITY.md  entities.json  index.html  mempalace.yaml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-desktop.yml
scripts/: sync-version.mjs
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  path_utils.rs
src-tauri/src/commands/: collections.rs  discover.rs  git_import.rs  github_import.rs  linker.rs  marketplace.rs  mod.rs  scanner.rs  settings.rs  skills.rs  updates.rs
src/data/: officialSources.ts
src/hooks/: useLocalStorageToggle.ts
src/i18n/: index.ts
src/lib/: frontmatter.ts  platformVisibility.ts  remoteContent.ts  utils.ts
src/pages/: CentralSkillsView.tsx  CollectionView.tsx  CollectionsListView.tsx  DiscoverView.tsx  MarketplaceView.tsx  PlatformView.tsx  SettingsView.tsx  SkillDetail.tsx
src/stores/: centralSkillsStore.ts  collectionStore.ts  discoverStore.ts  marketplaceStore.ts  platformStore.ts  skillDetailStore.ts  themeStore.ts
src/test/: App.test.tsx  CentralSkillsView.test.tsx  CollectionEditor.test.tsx  CollectionPickerDialog.test.tsx  CollectionView.test.tsx  CollectionsListView.test.tsx  DiscoverConfigDialog.test.tsx  DiscoverView.test.tsx  InstallDialog.test.tsx  MarketplaceOfficialPreview.test.tsx  MarketplaceSkillDetailDrawer.test.tsx  MarketplaceView.test.tsx  PlatformView.test.tsx  (+13 more)
(+47 files in other folders)
