[package]
name = "skill-link"
version = "0.1.0"
description = "Cross-platform AI agent skill linker — install once, sync everywhere"
authors = ["EndlessGr1ef <endlessgrief@outlook.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "skill_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
